[package]
name = "octetkeypair"
version = "0.1.0"
authors = ["Kirk Peterson <necrobious@gmail.com>"]
edition = "2018"
description = "serde-json based JWK serializer & deserializer for representing Curve25591 keys ala rfc8037"

[dependencies]
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64     = "0.10"


